# findata-br

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFESTO.txt  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github-pending/: ci.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  new-source.yml
.github/workflows/: ci.yml  rebuild-registry.yml
deploy/: docker-compose.prod.yml  findata-br.service
docs/: CHART_STANDARDS.md  DEPLOY_PUBLIC.md  OPENFINANCE_PUBLIC.md  SOURCES_AND_ENDPOINTS.md  SOURCES_WITH_AUTH.md  SOURCE_PRIORITIES.md
docs/source-notes/: advfn.md  basedosdados.md  yahoo.md
scripts/: benchmark_public_surface.py  build_registry.py  dev_server.sh
scripts/git/: guardrails.sh  install-hooks.sh
src/findata/: __init__.py  _cache.py  _limits.py  _odata.py  banner.py  cli.py  http_client.py
src/findata/api/: __init__.py  app.py
src/findata/api/routers/: __init__.py  anbima.py  aneel.py  b3.py  basedosdados.py  bcb.py  cvm.py  ibge.py  ipea.py  openfinance.py  receita.py  registry.py  susep.py  tesouro.py  yahoo.py
src/findata/auth/: __init__.py  base.py  oauth2.py
src/findata/registry/: __init__.py  models.py  schema.sql  store.py
src/findata/sources/: __init__.py
src/findata/sources/anbima/: __init__.py  client.py  credentials.py  indices.py
src/findata/sources/aneel/: __init__.py  leiloes.py
src/findata/sources/b3/: __init__.py  cotahist.py  indices.py  quotes.py
src/findata/sources/basedosdados/: __init__.py  catalog.py  models.py
src/findata/sources/bcb/: __init__.py  focus.py  ptax.py  sgs.py
src/findata/sources/cvm/: __init__.py  _directory.py  companies.py  fca.py  fidc.py  fii.py  financials.py  fip.py  funds.py  holdings.py  ipe.py  lamina.py  parser.py  profile.py
src/findata/sources/ibge/: __init__.py  indicators.py
src/findata/sources/ipea/: __init__.py  series.py
src/findata/sources/openfinance/: __init__.py  directory.py  portal.py
src/findata/sources/receita/: __init__.py  arrecadacao.py
src/findata/sources/susep/: __init__.py  empresas.py
src/findata/sources/tesouro/: __init__.py  bonds.py  siconfi.py
src/findata/sources/yahoo/: __init__.py  chart.py
src/findata/web/: __init__.py  landing.py
src/findata/web/static/: chart-explorer.js  site.css  site.js
src/findata/web/templates/: charts.html  docs.html  index.html  sources.html
tests/: conftest.py  test_anbima.py  test_anbima_indices.py  test_aneel_leiloes.py  test_api.py  test_auth.py  test_b3.py  test_b3_cotahist_indices.py  test_b3_sync.py  test_basedosdados.py  test_bcb.py  test_bcb_sgs.py  test_benchmark_public_surface.py  test_cvm_fii_fidc_fip.py  test_cvm_funds.py  test_cvm_ipe_fca.py  test_http_client.py  test_ibge.py  test_integration.py  test_ipea.py  test_models.py  test_openfinance.py  test_receita_arrecadacao.py  test_registry_router.py  test_registry_store.py  test_susep_empresas.py  test_tesouro_siconfi.py  test_yahoo_chart.py
