[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "findata-br"
version = "0.1.0"
description = "Open-source Brazilian financial data API, MCP server, and CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Roberto", email = "robertoecf@users.noreply.github.com" }]
keywords = ["brazil", "brasil", "finance", "financas", "api", "mcp", "bcb", "cvm", "b3", "ibge", "tesouro", "ptax", "focus", "selic", "ipca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.0",
    "fastapi-mcp>=0.1",
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
b3 = ["yfinance>=0.2.50"]
all = ["yfinance>=0.2.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "yfinance>=0.2.50",
    "respx>=0.21",
]

[project.scripts]
findata = "findata.cli:app"

[project.urls]
Homepage = "https://github.com/robertoecf/findata-br"
Repository = "https://github.com/robertoecf/findata-br"
Issues = "https://github.com/robertoecf/findata-br/issues"
Documentation = "https://github.com/robertoecf/findata-br#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/findata"]

[tool.hatch.build.targets.sdist]
include = ["src/findata", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Philosophy (inspired by wealthuman's biome + eslint split):
#   - Core hygiene:     E/W/F/I/N/UP/B/SIM/RUF   → like Biome's base linting.
#   - AI guardrails:    C901/PLR0911-13-15/PLR2004 → like ESLint's max-* and
#     no-magic-numbers rules; catch functions/branches/returns that balloon
#     beyond what a human or model can reason about in one screen.
select = [
    "E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF",
    # AI guardrails (Pylint refactor + mccabe complexity):
    "C901",        # McCabe complexity (default threshold 10)
    "PLR0911",     # too-many-return-statements
    "PLR0912",     # too-many-branches
    "PLR0913",     # too-many-arguments
    "PLR0915",     # too-many-statements
    "PLR2004",     # magic-value-comparison
    "S",           # flake8-bandit (security)
    "ERA",         # commented-out code
    "T20",         # print / pprint (use logging / rich)
]
ignore = [
    "RUF001", "RUF002", "RUF003",  # allow Portuguese accents in strings/docstrings
    "S101",  # assert used — fine in tests, already globally rejected in non-test via other tools
    "S104",  # binding to all interfaces — we want that for `findata serve`
    "S310",  # suspicious urlopen — only in smoke-test scripts
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6          # FastAPI handlers often take many Query() params
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "E501",           # long lines in test data
    "S",              # bandit rules not relevant in tests
    "PLR2004",        # magic numbers fine in asserts
    "PLR0913",        # test fixtures may take many params
    "ERA",            # commented-out example snippets
]
# FastAPI idiom: Query() / Depends() calls in argument defaults.
"src/findata/api/routers/**" = ["B008", "PLR0913"]
# CLI commands are naturally wide (many typer.Option flags).
"src/findata/cli.py" = ["PLR0913"]
# Banner uses rich + sys.stdout directly — not a print-statement debug.
"src/findata/banner.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*", "fastapi_mcp", "fastapi_mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live public APIs (deselect with '-m \"not integration\"')",
]
addopts = ["-m", "not integration"]
